# pic-formatter

./: README.md
backend/: pyproject.toml
backend/src/converter_api/: main.py
backend/src/services/: convert.py
backend/tests/: test_api_integration.py  test_convert_unit.py
backend/tests/data/: sample.HEIC
